8205677: [8u] casts and type change for 8u to enable later Windows compilers

Reviewed-by: dholmes